k8s/overlays/dev/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  template:
    spec:
      containers:
        - name: mongo
