k8s/overlays/dev/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dev.myapp.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: backend-service-dev
                port:
                  number: 8000
